--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="linkin park.png" type="image/x-icon">
     <title>Linkin park</title>
 </head>
 <body>
-    <h1>Linkin park</h1>
+    <div>
+        <H1>Welcome to</H1>
+        <h1><span class="band-color">Linkin park</span> family</h1>
+    </div>
+    <div>
+        <img src="linkin park.png" alt="">
+    </div>
 </body>
 </html>
