--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <title>Linkin park</title>
 </head>
 <body>
-    <div>
-        <H1>Welcome to</H1>
-        <h1><span class="band-color">Linkin park</span> family</h1>
-    </div>
-    <div>
-        <img src="linkin park.png" alt="">
-    </div>
+    <section class="display-flex">
+        <div class="page-width">
+            <H1>Welcome to</H1>
+            <h1><span class="band-color">Linkin park</span> family</h1>
+                <p><span class="band-color"><b>Linkin Park </span> is an American rock band</b> from Agoura Hills, California. The band's current lineup comprises vocalist/rhythm guitarist/keyboardist Mike Shinoda, lead guitarist Brad Delson, bassist Dave Farrell, DJ/turntablist Joe Hahn and drummer Rob Bourdon, all of whom are founding members. Vocalists Mark Wakefield and Chester Bennington are former members of the band. Categorized as alternative rock, Linkin Park's earlier music spanned a fusion of heavy metal and hip hop, while their later music features more electronica and pop elements.</p>
+    
+               <p>Formed in 1996, Linkin Park rose to international fame with their debut studio album, Hybrid Theory (2000), which became certified Diamond by the Recording Industry Association of America (RIAA). Released during the peak of the nu metal scene, the album's singles' heavy airplay on MTV led the singles "One Step Closer", "Crawling" and "In the End" all to chart highly on the US Mainstream Rock chart. The lattermost also crossed over to the nation's Billboard Hot 100. Their second album, Meteora (2003), continued the band's success.The band explored experimental sounds on their third album, Minutes to Midnight (2007). By the end of the decade, Linkin Park was among the most successful and popular rock acts.</p><br>
+               <a target="_blank" class="button" href="https://www.facebook.com/linkinpark/">Facebook page</a>
+
+        </div>
+        <div class="page-width">
+            <img src="linkin park.png" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
