--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
         </div>
     </section>
 
-    <section class="">
+    <section class="hybrid-theory">
+        <div class="page-width">
+            <img src="images/hybrid theory.jpg" alt="">
+        </div>
+        <div class="page-width">
+            <h1>Hybrid Theory</h1>
+            <p> <b>Hybrid Theory</b>
+                is the debut studio album by American rock band Linkin Park,   released 
+                on October 24, 2000, through Warner Bros. Records. Recorded at NRG Recordings in North Hollywood, California, and produced by Don Gilmore, the album's lyrical themes deal with problems lead vocalist Chester Bennington experienced during his adolescence, including drug abuse and the constant fighting and divorce of his parents. Hybrid Theory takes its title from the previous name of the band as well as the concept of music theory and combining different styles. This is also the only album on which bassist Dave Farrell does not play.</p>
+
+                <p>singles were released from Hybrid Theory: "One Step Closer", "In the End", "Crawling" and "Papercut", all of them being responsible for launching Linkin Park into mainstream popularity. While "In the End" was the most successful of the four, all of the singles in the album remain some of the band's most successful songs to date. Although "Runaway", "Points of Authority", and "My December" from the special edition bonus disc album were not released as singles, they were minor hits on alternative rock radio stations thanks to the success of all of the band's singles and the album; "Runaway" has also made several appearances on radio.</p> <br>
+                
+                <a target="_blank" class="button"  href="https://www.youtube.com/watch?v=2UnWZMsTwHA">Listen Full Album</a>
+                
+        </div>
 
     </section>
 
